--- a/blocks/card.css
+++ b/blocks/card.css
@@ -10,7 +10,7 @@
 }
 .card__title {
   margin: 0 0 32px;
-  font-family: "Inter", "Arial", "sans-serif";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: bold;
   font-size: 20px;
   line-height: 30px;
@@ -18,7 +18,7 @@
 .card__list-item {
   display: flex;
   gap: 10px;
-  font-family: "Noto Serif", "Times New Roman", "serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 16px;
   line-height: 20px;
 }
