--- a/blocks/form.css
+++ b/blocks/form.css
@@ -9,7 +9,7 @@
   margin: 8px 0 32px;
   border: 1px solid #838383;
   border-radius: 4px;
-  font-family: "Inter", "Arial", "sans-serif";
+  font-family: "Inter", "Arial", sans-serif;
   font-size: 20px;
   line-height: 30px;
 }
@@ -38,7 +38,7 @@
   height: 20px;
 }
 .form__label {
-  font-family: "Inter", "Arial", "sans-serif";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
@@ -47,8 +47,4 @@
   display: flex;
   gap: 12px;
   justify-content: center;
-  font-family: "Inter", "Arial", "sans-serif";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
 }
