--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -11,7 +11,7 @@
 }
 
 .menu__title {
-  font-family: "Inter", "Arial", "sans-serif";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
@@ -21,9 +21,10 @@
 .menu__subtitle {
   margin: 0 0 100px;
   max-width: 780px;
-  font-family: "Noto Serif", "Times New Roman", "serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
+  text-align: center;
 }
 .menu__cards {
   margin: 0;
