--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -3,10 +3,13 @@
   background-color: #0a2750;
   padding: 100px 80px 215px;
   background-image: url(../images/background_recipes.svg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .recipes__title {
   margin: 0 0 24px;
-  font-family: "Inter", "Arial", "sans-serif";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
@@ -14,7 +17,7 @@
 }
 .recipes__subtitle {
   margin: 0 0 80px;
-  font-family: "Noto Serif", "Times New Roman", "serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
   max-width: 438px;
@@ -25,15 +28,17 @@
   gap: 40px;
   list-style-type: none;
   margin: 0 0 0;
+  padding: 0;
 }
 .recipes__iframe {
   width: 480px;
   height: 273px;
+  border-style: none;
 }
 .recipes__video-caption {
   display: flex;
   justify-content: space-between;
-  font-family: "Inter", "Arial", "sans-serif";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
